--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -12,6 +12,9 @@
         <li class="nav-item">
           <a class="nav-link {{active_feeder}}" href="{{ url_for('forecast_feeder' ) }}">Feeder</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link {{active_har}}" href="{{ url_for('rencana_pemeliharaan' ) }}">Pemeliharaan</a>
+        </li>
       </ul>
       <button class="btn btn-outline-success"><i class="bi-person-circle me-2"></i>Admin</button>
     </div>
