--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -3,7 +3,7 @@
   <head>
     {% include 'includes/styles.html' %}{% block title %} {% endblock %}
     <!-- Favicons -->
-    <link href="" rel="icon" />
+    <link href="{{ url_for('static', filename='img/logo3.png' ) }}" rel="icon" />
   </head>
   <body>
     {% include 'includes/navbar.html' %}{% block content %} {% endblock %} {% include 'includes/scripts.html' %}
