--- a/app/templates/pages/login.html
+++ b/app/templates/pages/login.html
@@ -13,15 +13,15 @@
       <div class="row">
         <div class="col-12 position-relative">
           <img src="{{ url_for('static', filename='img/logo3.png' ) }}" class="img-fluid position-absolute start-50 translate-middle" alt="" />
-          <form class="card w-100 mx-auto text-center border rounded-4 shadow-lg">
+          <form class="card text-center border rounded-4 shadow-lg" method="post" action="">
             <h1 class=""><span style="color: #4a0e03">Red</span><span style="color: #ee2110">Panda</span></h1>
             <h2 class="h3 mb-3 fw-normal">Please sign in</h2>
-            {% with messages = get_flashed_messages() %} {% if messages %} {% for message in messages %}
+            {% with messages = get_flashed_messages() %} {% if messages %} {% for message in messages %}{% if message != 'Please log in to access this page.' %}
             <div class="alert alert-danger alert-dismissible fade show" role="alert">
               {{message}}
               <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
-            {% endfor %} {% endif %} {% endwith %}
+            {% endif %} {% endfor %} {% endif %} {% endwith %}
             <div class="form-floating">
               <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="email" />
               <label for="floatingInput">Email address</label>
